# synth2

./: .gitignore  Cargo.toml  Untitled.ipynb  example.synth2  notes.md  rust-toolchain
.cargo/: config.toml
components/s2_bin/: Cargo.toml  threads.rs
components/s2_bin/src/: audio_player.rs  main.rs  plotting.rs  synth.rs  tables.rs
components/s2_lib/: Cargo.toml
components/s2_lib/src/: envelopes.rs  filters.rs  lib.rs  synth.rs  synth2.rs
components/s2_lib/src/old/: envelopes.rs  f64.rs  filters.rs  math.rs  mod.rs  oscillators.rs  seq.rs  simdtest.rs  synth.rs  synth2.rs
components/s2_lib/src/try3/: dsp_filters.rs  envelopes.rs  filters.rs  hashnoise.rs  lookup.rs  lowered_config.rs  math.rs  mod.rs  oscillators.rs  process.rs  render_plan.rs  state.rs  static_config.rs  synth.rs  tables.rs  units.rs
components/s2_lib/src/try4/: dsptypes.rs  mod.rs
components/s2_nih/: Cargo.toml
components/s2_nih/src/: lib.rs  main.rs
components/xtask/: Cargo.toml
src/: f64.rs  i16.rs  main.rs  math.rs  oscillators.rs  plotting.rs  seq.rs  simdtest.rs  synth.rs  synth2.rs  threads.rs  ui.rs
src/try3/: dynamic_config.rs  envelopes.rs  mod.rs  oscillators.rs  process.rs  state.rs  static_config.rs  units.rs
www/: streamer.html  streamer.js
