[package]
name = "synth2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
charts = "0.3.0"
log = "0.4.16"
plotters = "0.3.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tungstenite = "0.17.2"
