[package]
name = "synth2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
charts = "0.3.0"
env_logger = "0.9.0"
fxhash = "0.2.1"
log = "0.4.17"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
termion = "1.5.6"
tungstenite = "0.17.2"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
