[package]
name = "s2_bin"
version = "0.1.0"
edition = "2021"

[dependencies]
s2_lib = { path = "../s2_lib" }
muddy2 = { path = "../../../muddy2" }

anyhow = "1.0.69"
env_logger = "0.10.0"
log = "0.4.17"
#termion = "1.5.6"
tungstenite = "0.17.3"
charts = "0.3.0"
clap = { version = "4.1.4", features = ["derive"] }
midir = "0.9.1"
cpal = "0.13.5"
