[package]
name = "s2_bin"
version = "0.1.0"
edition = "2021"

[dependencies]
s2_lib = { path = "../s2_lib" }
muddy2 = { path = "../../../muddy2" }

anyhow = "1.0.97"
env_logger = "0.11.8"
log = "0.4.27"
#termion = "1.5.6"
tungstenite = "0.26.2"
clap = { version = "4.5.35", features = ["derive"] }
midir = "0.10.1"
cpal = "0.15.3"
