[package]
name = "s2_nih"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
s2_lib = { path = "../s2_lib" }
atomic_float = "0.1"

[dependencies.nih_plug]
git = "https://github.com/robbert-vdh/nih-plug.git"
rev = "6e89d3737ba4ecf266330bec9af3866c9cb16c97"
features = ["assert_process_allocs", "standalone"]

[dependencies.nih_plug_vizia]
git = "https://github.com/robbert-vdh/nih-plug.git"
rev = "6e89d3737ba4ecf266330bec9af3866c9cb16c97"


