[package]
name = "s2_nih"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
s2_lib = { path = "../s2_lib" }
atomic_float = "0.1"

[dependencies.nih_plug]
git = "https://github.com/robbert-vdh/nih-plug.git"
rev = "f557707b097201f175c429d9b41c9860fab71f44"
features = ["assert_process_allocs", "standalone"]

[dependencies.nih_plug_vizia]
git = "https://github.com/robbert-vdh/nih-plug.git"
rev = "f557707b097201f175c429d9b41c9860fab71f44"


